<resources>
    <string name="booking">Бронирование</string>
    <string name="flight_from">Вылет из</string>
    <string name="destination">Страна, город</string>
    <string name="dates">Даты</string>
    <string name="nights_number">Кол-во ночей</string>
    <string name="hotel">Отель</string>
    <string name="room">Номер</string>
    <string name="food">Питание</string>
    <string name="buyer_info">Информация о покупателе</string>
    <string name="phone_number">Номер телефона</string>
    <string name="email">Почта</string>
    <string name="nothing">Эти данные никому не передаются. После оплаты мы вышлем чек на указанные вами номер и почту</string>
    <string name="dates_window">%1$s - %2$s</string>
    <string name="n_tourist">%1$s турист</string>
    <string name="collide">Свернуть</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="birthday">День рождения</string>
    <string name="citizenship">Гражданство</string>
    <string name="foreign_passport_number">Номер загранпаспорта</string>
    <string name="foreign_passport_date">Срок действия загранпаспорта</string>
    <string name="order_is_paid">Заказ оплачен</string>
    <string name="return_to_booking">Вернуться</string>
    <string name="order_is_active">Ваш заказ принят в работу</string>
    <string name="party_popper">Праздничный колпак</string>
    <string name="order_info">Подтверждение заказа %1$d может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
    <string name="fill_data">Заполните данные</string>
    <string name="pay">Оплатить %1$d</string>
    <string name="tour">Тур</string>
    <string name="service_charge">Сервисный сбор</string>
    <string name="fuel_charge">Топливный сбор</string>
    <string name="total">К оплате</string>
    <string name="tour_price">%1$d ₽</string>
    <string name="fuel_price">%1$d ₽</string>
    <string name="service_price">%1$d ₽</string>
    <string name="total_price">%1$d ₽</string>
    <string name="super_value">Супер!</string>
</resources>