<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.BookingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/top_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <Button
                    android:id="@+id/back_button"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/baseline_arrow_back_ios_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    style="@style/TitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/booking"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/hotel_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/top_menu">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/hotel_rating_cv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="#34FFA800"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    app:cardCornerRadius="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#34FFA800"
                        android:orientation="horizontal"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="5dp"
                        app:layout_constraintStart_toStartOf="parent">

                        <ImageView
                            android:id="@+id/star_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:importantForAccessibility="no"
                            android:src="@drawable/star" />

                        <TextView
                            android:id="@+id/hotel_rating"
                            style="@style/HotelRatingText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/rating" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/hotel_name"
                    style="@style/TitleText"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/hotel_rating_cv"
                    tools:text="Long Name" />

                <TextView
                    android:id="@+id/address"
                    style="@style/HotelAddressText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/hotel_name"
                    tools:text="Yet Another Long Address" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/flight_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/hotel_info">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/flight_from"
                    style="@style/FlightInfoText"
                    android:layout_marginTop="0dp"
                    android:text="@string/flight_from"
                    app:layout_constraintBottom_toBottomOf="@id/flight_from_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="true" />

                <TextView
                    android:id="@+id/destination"
                    style="@style/FlightInfoText"
                    android:layout_marginTop="16dp"
                    android:text="@string/destination"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/flight_from"
                    tools:ignore="true" />

                <TextView
                    android:id="@+id/dates"
                    style="@style/FlightInfoText"
                    android:text="@string/dates"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/destination"
                    tools:ignore="true" />

                <TextView
                    android:id="@+id/nights_number"
                    style="@style/FlightInfoText"
                    android:text="@string/nights_number"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dates"
                    tools:ignore="true" />

                <TextView
                    android:id="@+id/hotel"
                    style="@style/FlightInfoText"
                    android:text="@string/hotel"
                    app:layout_constraintBottom_toBottomOf="@id/hotel_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nights_number" />

                <TextView
                    android:id="@+id/room"
                    style="@style/FlightInfoText"
                    android:text="@string/room"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/hotel" />

                <TextView
                    android:id="@+id/food"
                    style="@style/FlightInfoText"
                    android:text="@string/food"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/room" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/flight_barrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="right"
                    app:constraint_referenced_ids="destination, nights_number" />

                <TextView
                    android:id="@+id/flight_from_tv"
                    style="@style/FlightInfoTextResult"
                    app:layout_constraintStart_toStartOf="@id/flight_barrier"
                    tools:text="Asd" />

                <TextView
                    android:id="@+id/destination_tv"
                    style="@style/FlightInfoTextResult"
                    app:layout_constraintStart_toStartOf="@id/flight_barrier"
                    app:layout_constraintTop_toBottomOf="@id/flight_from_tv"
                    tools:text="Asd" />

                <TextView
                    android:id="@+id/dates_tv"
                    style="@style/FlightInfoTextResult"
                    app:layout_constraintStart_toStartOf="@id/flight_barrier"
                    app:layout_constraintTop_toBottomOf="@id/destination_tv"
                    tools:text="Asd" />

                <TextView
                    android:id="@+id/nights_number_tv"
                    style="@style/FlightInfoTextResult"
                    app:layout_constraintStart_toStartOf="@id/flight_barrier"
                    app:layout_constraintTop_toBottomOf="@id/dates_tv"
                    tools:text="Asd asd asd asd asdddddddasd asdsdddddasd asd" />

                <TextView
                    android:id="@+id/hotel_tv"
                    style="@style/FlightInfoTextResult"
                    app:layout_constraintStart_toStartOf="@id/flight_barrier"
                    app:layout_constraintTop_toBottomOf="@id/nights_number_tv"
                    tools:text="Asd" />

                <TextView
                    android:id="@+id/room_tv"
                    style="@style/FlightInfoTextResult"
                    app:layout_constraintStart_toStartOf="@id/flight_barrier"
                    app:layout_constraintTop_toBottomOf="@id/hotel_tv"
                    tools:text="Asd" />

                <TextView
                    android:id="@+id/food_tv"
                    style="@style/FlightInfoTextResult"
                    app:layout_constraintStart_toStartOf="@id/flight_barrier"
                    app:layout_constraintTop_toBottomOf="@id/room_tv"
                    tools:text="Asd" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/buyer_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flight_details">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/buyer_info"
                    style="@style/TitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buyer_info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    app:layout_constraintTop_toBottomOf="@id/buyer_info">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_number"
                        android:inputType="phone"
                        android:digits="0123456789+"
                        android:maxLength="16"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:layout_constraintTop_toBottomOf="@id/phone_container">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/SupportGreyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/nothing"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_container" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tourists_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/buyer_info_container" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:layout_constraintTop_toBottomOf="@id/tourists_rv">

            <Button
                android:id="@+id/payment_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tourists_rv"
                tools:text="Оплатить 123123" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>